Publish scripts handling version change

--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
 
     "bin": {
         "retouchpad": "./server.js"
+    },
+    "scripts": {
+        "prepublish": "./scripts/prepublish.sh",
+        "publish": "./scripts/postpublish.sh"
     }
 }
