Revert "WIP Better WebSocket library with old and new protocol support"
This reverts commit ed76869ec1e50d509da223d50071e6f6838d4bd6.

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "private": true,
     "main": "server",
     "engines": {
-        "node": ">=0.4.0"
+        "node": ">=0.2.0-0"
     },
     "dependencies": {
-        "socket.io": "~0.9.16",
+        "websocket-server": "~1.4.04",
         "connect": "*"
     },
 
