Revert "Try engine.io", performance dropped
This reverts commit db946af3da6a82f730d197c30816e1d65ec38866.

--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
   },
   "dependencies": {
     "websocket-server": "~1.4.04",
-    "connect": "*",
-    "engine.io": "~0.7.9",
-    "engine.io-client": "~0.7.9"
+    "connect": "*"
   },
   "config": {
     "web-port": "8080",
